@@ -2,8 +2,9 @@ vorbis-tools 1.2.1 -- Unreleased
 
 * Fixed an error in configure.ac; --with-speex/flac work again (#1319)
 * Corrected problems in the Visual Studio project files
-* ogg123: backported fix from libfishsound to patch the speex decoder (#1347)
+* ogg123: backported fix from libfishsound to patch the Speex decoder (#1347)
 * oggenc: fixed a core dump while resampling from FLAC (#1316)
+* ogginfo: support for information in Kate streams (#1360)
 
 vorbis-tools 1.2.0 -- 2008-02-21
 
